force-app/main/default/objects/BusinessTripEvent__c/BusinessTripEvent__c.object-meta.xml
<CustomObject>
    <description>Eventos relacionados con un business trip</description>
    <label>XXXXBusiness Trip Event</label>
    <nameField>
        <displayFormat>BE-{00000000}</displayFormat>
        <label>Business Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Trip Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>