force-app/main/default/objects/BusinessTripEvent__c/fields/Business_Trip_Visit__c.field-meta.xml
<CustomField>
    <fullName>Business_Trip_Visit__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Business Trip Visit</label>
    <referenceTo>BusinessTripVisit__c</referenceTo>
    <relationshipName>Business_Trip_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>