force-app/main/default/objects/BusinessTripEvent__c/fields/CallToAction__c.field-meta.xml
<CustomField>
    <fullName>CallToAction__c</fullName>
    <label>Call to Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RED</fullName>
            </value>
            <value>
                <fullName>YELLOW</fullName>
            </value>
            <value>
                <fullName>GREEN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>