force-app/main/default/objects/BusinessTripEvent__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PRESCRIPTOR</fullName>
            </value>
            <value>
                <fullName>DISTRIBUTOR</fullName>
            </value>
            <value>
                <fullName>BUILDER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>