force-app/main/default/objects/BusinessTripEvent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Propuesto</fullName>
                <default>true</default>
                <label>Propuesto</label>
            </value>
            <value>
                <fullName>Aceptado</fullName>
            </value>
            <value>
                <fullName>Denegado</fullName>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
                <isActive>false</isActive>
                <label>ACTIVE</label>
            </value>
            <value>
                <fullName>DEVELOPMENT</fullName>
                <isActive>false</isActive>
                <label>DEVELOPMENT</label>
            </value>
            <value>
                <fullName>POTENTIAL</fullName>
                <isActive>false</isActive>
                <label>POTENTIAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>