force-app/main/default/objects/BusinessTripEvent__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>Comment__c</columns>
    <columns>Channel__c</columns>
    <columns>Status__c</columns>
    <columns>CallToAction__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>